Forenklet svpkode ved henting av tilrettelegginger.